crates/store/re_redap_tests/src/tests/snapshots/re_redap_tests__tests__unregister_segment__products_1_register_all_manifest_schema.snap
---
source: crates/store/re_redap_tests/src/tests/unregister_segment.rs
expression: batch.format_schema_snapshot()
---
rerun_last_updated_at: non-null Timestamp(ns)
rerun_layer_name: non-null Utf8
rerun_layer_type: non-null Utf8
rerun_num_chunks: non-null UInt64
rerun_registration_status: non-null Utf8
rerun_registration_time: non-null Timestamp(ns)
rerun_schema_sha256: non-null FixedSizeBinary(32)
rerun_segment_id: non-null Utf8
rerun_size_bytes: non-null UInt64
rerun_storage_url: non-null Utf8
