crates/store/re_redap_tests/src/tests/snapshots/re_redap_tests__tests__unregister_segment__products_1_register_all_segments_data.snap
---
source: crates/store/re_redap_tests/src/tests/unregister_segment.rs
expression: "filtered_batch.filter_columns_by(|f|\nf.metadata().get(\"rerun:index_kind\").is_none()).unwrap().format_snapshot(false)"
---
┌──────────────────┬───────────────────┬──────────────────┐
│ rerun_segment_id ┆ rerun_layer_names ┆ rerun_num_chunks │
╞══════════════════╪═══════════════════╪══════════════════╡
│ my_segment_id1   ┆ [A, B, C, D]      ┆ 8                │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤
│ my_segment_id2   ┆ [A, B, C, D]      ┆ 8                │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤
│ my_segment_id3   ┆ [A, B, C, D]      ┆ 8                │
└──────────────────┴───────────────────┴──────────────────┘
